--- a/site-flex/estilo/estilo.css
+++ b/site-flex/estilo/estilo.css
@@ -6,21 +6,30 @@
   font-family: sans-serif;
   color: white;
 }
-.cabecalho{
-  width: 100%;
-  height: 80px;
+.background{
+  font-size: 1.23em;
   background-color: black;
+  width: 100%;
+}
+.cabecalho{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .menu ul{
-  flex-wrap: wrap;
-  max-width: 50%;
-  max-height: 50%;
-  list-style: none;
   display: flex;
-  justify-content: space-between;
-  align-content: center; 
+  list-style: none;
+  margin:5;
+  padding: 8px;
+  flex-wrap: wrap;
 }
 .menu ul li{
   margin:2px;
   padding: 3px;
+}
+.menu ul li:hover{
+  padding: 10px;
+  background-color: red;
+  text-transform: uppercase;
+  cursor: pointer;
 }
