--- a/site-flex/estilo/estilo.css
+++ b/site-flex/estilo/estilo.css
@@ -4,7 +4,7 @@
   margin:0;
   padding:0;
   font-family: sans-serif;
-  color: white;
+
 }
 .background{
   font-size: 1.23em;
@@ -12,6 +12,7 @@
   width: 100%;
 }
 .cabecalho{
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -32,4 +33,87 @@
   background-color: red;
   text-transform: uppercase;
   cursor: pointer;
+}
+
+/*formatando itens/*/
+.produtos-destaque{
+  width: 50%;
+  position: absolute;
+  background-color:rgb(255, 255, 255);
+  
+}
+.produtos-destaque h1{
+  margin-top: 10px;
+  text-transform: uppercase;
+}
+.produtos-destaque ul{
+  margin-top: 10px;
+  margin-left: 50px;
+  flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+}
+.post{
+  
+  list-style: none;
+  border: 2px solid rgba(0, 0, 0, 0.137);
+  position: relative;
+  width: 200px;
+  padding: 10px;
+  margin:5px;
+  /*background-color: red;*/
+}
+.post img{
+  position: relative;
+}
+.post a{
+  text-decoration: none;
+  background:red;
+  color:white;
+  margin: 1px;
+  padding:2px;
+}
+
+aside{
+ /* position: absolute;*/
+  display: flex; 
+  background-color: rgba(14, 49, 49, 0.555);
+  width: 50%;
+  float: right;
+  padding-left: 10px;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+aside h1{
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+aside p{
+  margin-top: 100px;
+  text-align: center;
+}
+aside div{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  margin: 20px;
+}
+span{
+  margin-top: 100px;
+}
+footer{
+  position: relative;
+  display: flex;
+  height: 50px;
+  background-color: black;
+  width: 100%;
+  clear: both;
+  color: white;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
