--- a/netflix/css/estilo.css
+++ b/netflix/css/estilo.css
@@ -4,20 +4,19 @@
   padding: 0;
   font-family: sans-serif;
 }
-.background{
-  position: absolute;
-  width:1366px ;
+body{
+  width:1280px ;
   height: 700px;
-  background: radial-gradient(#0000, rgba(238, 8, 8, 0.931));
+  background: url("../img/fundo.jpg") center;
+  /*background: radial-gradient(#0000, rgba(238, 8, 8, 0.931));*/
 }
 .cabecalho{
-  position: relative;
   display: flex;
-  background: url("../img/fundo.jpg") center;
-  width:1366px;
+
+  width:1280px;
   height: 700px;
   flex-direction: column;
-  justify-content: center;
+  justify-content: center; 
   align-items: center;
   color: white;
 }
@@ -29,4 +28,26 @@
 .cabecalho p{
   margin: 20px;
   text-align: center;
+}
+.topo{
+  display: flex;
+  justify-content: space-between;
+  margin:22px;
+  color: aliceblue;
+}
+.topo a{
+  text-decoration: none;
+  text-transform: capitalize;
+  color:white;
+  background-color: red;
+  width: 70px;
+  padding: 5px;
+  text-align: center;
+  height: 20px;
+  border-radius: 5px;
+}
+.topo span{
+  font-size: 3em;
+  font-weight: bold;
+  color:red;
 }
